--- a/lab-2.html
+++ b/lab-2.html
@@ -21,14 +21,7 @@
 
 <body>
 <div class="container">
-    <h4>
-        Lab Exercise 2 (XML, jQuery, CSS and AJAX)
-        <br/> Multimedia Web Programming (Section 02)
-        <br/> Naadiyah Binti Haris | A13CS0192
-        <br/><br/>
-    </h4>
-
-    <b>CAR LIST</b>
+    <b>Lab 2</b>
     <hr/>
 
     <!-- Append of the xml document occurs here -->
